# tiny-rag

./: LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: solve.md
.claude/hooks/: bash-hooks.sh
bench/: benchmark.py  metrics.py  utils.py
src/tiny_rag/: __init__.py  embeddings.py  rag.py  reranker.py  types.py  vector_store.py
tests/: test_embeddings.py  test_rag.py  test_reranker.py  test_tiny_rag.py  test_vector_store.py
